--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -71,7 +71,7 @@ runs:
       run: |
         $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
         Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
-        .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1 PrependPath=1
+        .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1
         Start-Sleep -Seconds 10
         Get-ChildItem -Path "$env:LocalAppData\Programs\Python\Python313"
         $env:Path += ";$env:LocalAppData\Programs\Python\Python313"
@@ -120,7 +120,7 @@ runs:
       run: |
         wget https://bootstrap.pypa.io/get-pip.py
         python3.13t get-pip.py
-        python3.13t -m pip install -U pip install setuptools wheel find-libpython
+        python3.13t -m pip install -U pip setuptools wheel find-libpython
         python3.13t -m pip freeze list
         python3.13t -m pip install dependency/src/main/resources/python/pemjax-0.2.0.tar.gz
         python3.13t -m pip freeze list
