--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -76,6 +76,7 @@ runs:
         Get-ChildItem -Path "$env:LocalAppData\Programs\Python\Python313"
         $env:Path += ";$env:LocalAppData\Programs\Python\Python313"
         python3.13t -VV
+        python -VV
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
       name: Setup Python3.13 on Linux
