--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -119,11 +119,14 @@ runs:
       name: Install pemjax in free-threading python
       shell: bash
       run: |
-        wget https://bootstrap.pypa.io/get-pip.py
+        curl -O https://bootstrap.pypa.io/get-pip.py
         python3.13t get-pip.py
         python3.13t -m pip install -U pip setuptools wheel find-libpython
         python3.13t -m pip freeze list
-        python3.13t -m pip install dependency/src/main/resources/python/pemjax-0.2.0.tar.gz
+        tar -xzf dependency/src/main/resources/python/pemjax-0.1.0.tar.gz
+        ls
+        cd pemjax-0.1.0
+        python3.13t setup.py install
         python3.13t -m pip freeze list
 
     - name: Set up JDK ${{ inputs.java }}
