--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -86,7 +86,7 @@ runs:
       run: |
         sudo add-apt-repository ppa:deadsnakes
         sudo apt-get update
-        sudo apt-get install python3.13-nogil python3-distutils python3-dev
+        sudo apt-get install python3.13-nogil python3.13-dev
         python3.13t -VV
         
 
