--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -65,6 +65,7 @@ runs:
         python -m pip install --upgrade pip
         pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests
 
+    # have to wait until installation finishes
     - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
       name: Setup Python3.13 on Windows
       shell: powershell
@@ -73,11 +74,9 @@ runs:
         Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
         .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1
         Start-Sleep -Seconds 20
-        Get-ChildItem -Path "$env:LocalAppData\Programs\Python\Python313"
         $pythonPath = "$env:LocalAppData\Programs\Python\Python313"
         $env:Path += ";$pythonPath"
         echo "$pythonPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        python -VV
         python3.13t -VV
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
