--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -11,7 +11,7 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
+    free-thread-test:
+        uses: ./.github/workflows/free-thread-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
