--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -123,7 +123,7 @@ runs:
       run: |
         curl -O https://bootstrap.pypa.io/get-pip.py
         python3.13t get-pip.py
-        python3.13t -m pip install setuptools wheel find-libpython build
+        sudo python3.13t -m pip install setuptools wheel find-libpython build
         python3.13t -m pip freeze list
         
         tar -xzf dependency/src/main/resources/python/pemjax-0.1.0.tar.gz
@@ -131,7 +131,7 @@ runs:
         cd pemjax-0.1.0
         
         python3.13t setup.py bdist_wheel
-        python3.13t -m pip install dist/*.whl
+        sudo python3.13t -m pip install dist/*.whl
         python3.13t -m pip freeze list
         
         echo "==========================="
