--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -117,7 +117,24 @@ runs:
         python3.13t -VV
         export PATH="$PATH:/Library/Frameworks/PythonT.framework/Versions/3.13/bin"
 
-    - if: inputs.free-thread-python-required=='true'
+    - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
+      name: Install pemjax in free-threading python
+      shell: bash
+      run: |
+        curl -O https://bootstrap.pypa.io/get-pip.py
+        python3.13t get-pip.py
+        python3.13t -m pip install setuptools wheel find-libpython build
+        python3.13t -m pip freeze list
+        
+        tar -xzf dependency/src/main/resources/python/pemjax-0.1.0.tar.gz
+        ls
+        cd pemjax-0.1.0
+        
+        python3.13t setup.py bdist_wheel
+        python3.13t -m pip install dist/*.whl
+        python3.13t -m pip freeze list
+
+    - if: inputs.free-thread-python-required=='true' && runner.os!='Windows'
       name: Install pemjax in free-threading python
       shell: bash
       run: |
