--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -65,57 +65,9 @@ runs:
         python -m pip install --upgrade pip
         pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests
 
-    # have to wait until installation finishes
-    - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
-      name: Setup Python3.13 on Windows
-      shell: powershell
-      run: |
-        $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
-        Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
-        .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1
-        Start-Sleep -Seconds 20
-        $pythonPath = "$env:LocalAppData\Programs\Python\Python313"
-        $env:Path += ";$pythonPath"
-        echo "$pythonPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "FT_PYTHON_PATH=$pythonPath" | Out-File -FilePath $env:GITHUB_ENV -Append
-        python3.13t -VV
-
-    - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
-      name: Setup Python3.13 on Linux
-      shell: bash
-      run: |
-        sudo add-apt-repository ppa:deadsnakes
-        sudo apt-get update
-        sudo apt-get install python3.13-nogil python3.13-dev
-        python3.13t -VV
-        
-
-    - if: inputs.free-thread-python-required=='true' && runner.os=='macOS'
-      name: Setup Python3.13 on MacOS
-      shell: bash
-      run: |
-        curl -O https://www.python.org/ftp/python/3.13.0/python-3.13.0-macos11.pkg
-        cat > ./choicechanges.plist <<EOF
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <array>
-            <dict>
-                <key>attributeSetting</key>
-                <integer>1</integer>
-                <key>choiceAttribute</key>
-                <string>selected</string>
-                <key>choiceIdentifier</key>
-                <string>org.python.Python.PythonTFramework-3.13</string>
-            </dict>
-        </array>
-        </plist>
-        EOF
-        sudo installer -pkg ./python-3.13.0-macos11.pkg \
-            -applyChoiceChangesXML ./choicechanges.plist \
-            -target /
-        python3.13t -VV
-        export PATH="$PATH:/Library/Frameworks/PythonT.framework/Versions/3.13/bin"
+    - if: inputs.free-thread-python-required=='true'
+      name: Install free-thread python
+      uses: ./.github/actions/service/ftPython
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
       name: Install pemjax in free-threading python
@@ -131,7 +83,7 @@ runs:
         cd pemjax-0.1.0
         
         python3.13t setup.py bdist_wheel
-        python3.13t -m pip install dist/*.whl
+        python3.13t -m pip install dist/*.whl --no-clean
         python3.13t -m pip freeze list
 
     - if: inputs.free-thread-python-required=='true' && runner.os!='Windows'
@@ -148,7 +100,7 @@ runs:
         cd pemjax-0.1.0
         
         python3.13t setup.py bdist_wheel
-        sudo python3.13t -m pip install dist/*.whl
+        sudo python3.13t -m pip install dist/*.whl --no-clean
         python3.13t -m pip freeze list
         
         echo "==========================="
