--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -69,50 +69,9 @@ runs:
       name: Install free-thread python
       uses: ./.github/actions/service/ftPython
 
-    - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
+    - if: inputs.free-thread-python-required=='true'
       name: Install pemjax in free-threading python
-      shell: bash
-      run: |
-        curl -O https://bootstrap.pypa.io/get-pip.py
-        python3.13t get-pip.py
-        python3.13t -m pip install setuptools wheel find-libpython build pandas==2.2.3 numpy
-        python3.13t -m pip freeze list
-        
-        tar -xzf dependency/src/main/resources/python/pemjax-0.1.0.tar.gz
-        ls
-        cd pemjax-0.1.0
-        
-        python3.13t setup.py bdist_wheel
-        python3.13t -m pip install dist/*.whl --no-clean
-        python3.13t -m pip freeze list
-
-    - if: inputs.free-thread-python-required=='true' && runner.os!='Windows'
-      name: Install pemjax in free-threading python
-      shell: bash
-      run: |
-        curl -O https://bootstrap.pypa.io/get-pip.py
-        sudo python3.13t get-pip.py
-        sudo python3.13t -m pip install setuptools wheel find-libpython build pandas==2.2.3 numpy
-        python3.13t -m pip freeze list
-        
-        tar -xzf dependency/src/main/resources/python/pemjax-0.1.0.tar.gz
-        ls
-        cd pemjax-0.1.0
-        
-        python3.13t setup.py bdist_wheel
-        sudo python3.13t -m pip install dist/*.whl --no-clean
-        python3.13t -m pip freeze list
-        
-        echo "==========================="
-        echo $(python3.13t -c "import sysconfig; print(sysconfig.get_paths()['purelib'])")
-        ls $(python3.13t -c "import sysconfig; print(sysconfig.get_paths()['purelib'])")
-        echo "==========================="
-
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ${{ runner.os }}-pemjax-wheel
-        path: dist/*.whl
+      uses: ./.github/actions/service/pemjaWheelBuild
 
 
     - name: Set up JDK ${{ inputs.java }}
