--- a/.github/workflows/free-thread-test.yml
+++ b/.github/workflows/free-thread-test.yml
@@ -22,7 +22,7 @@ on:
         description: "The database to run the test on"
         type: string
         required: false
-        default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+        default: '["IoTDB12"]'
 
 jobs:
   Free-threading-Python-Test:
