--- a/.github/actions/service/pemjaWheelBuild/action.yml
+++ b/.github/actions/service/pemjaWheelBuild/action.yml
@@ -21,13 +21,18 @@ runs:
         path: ${{ env.PEMJAX_HOME }}/pemjax-${{ inputs.pemja-version }}/dist
         key: ${{ runner.os }}-pemjax-${{ inputs.pemja-version }}
 
-    - name: Build wheel
-      if: steps.restore-wheel.outputs.cache-hit!='true' && runner.os!='Windows'
+    - name: Install pip
+      if: runner.os=='Linux'
       shell: bash
       run: |
         curl -O https://bootstrap.pypa.io/get-pip.py
         sudo python3.13t get-pip.py
-        sudo python3.13t -m pip install setuptools wheel find-libpython build pandas==2.2.3 numpy thrift
+
+    - name: Build wheel
+      if: steps.restore-wheel.outputs.cache-hit!='true' && runner.os!='Windows'
+      shell: bash
+      run: |
+        sudo python3.13t -m pip install setuptools wheel find-libpython build
         python3.13t -m pip freeze list
 
         mkdir -p $PEMJAX_HOME
@@ -37,15 +42,11 @@ runs:
 
         python3.13t setup.py bdist_wheel
 
-    # pandas 2.2.3 cannot be directly installed on windows yet. use dev wheel file
     - name: Build wheel
       if: steps.restore-wheel.outputs.cache-hit!='true' && runner.os=='Windows'
       shell: bash
       run: |
-        curl -O https://bootstrap.pypa.io/get-pip.py
-        python3.13t get-pip.py
-        python3.13t -m pip install setuptools wheel find-libpython build numpy thrift
-        python3.13t -m pip install dependency/src/main/resources/python/pandas*.whl
+        python3.13t -m pip install setuptools wheel find-libpython build
         python3.13t -m pip freeze list
         
         mkdir -p $PEMJAX_HOME
@@ -59,13 +60,17 @@ runs:
       if: runner.os!='Windows'
       shell: bash
       run: |
+        sudo python3.13t -m pip install pandas==2.2.3 numpy thrift
         sudo python3.13t -m pip install $PEMJAX_HOME/pemjax-${{ inputs.pemja-version }}/dist/*.whl --no-clean
         python3.13t -m pip freeze list
 
+    # pandas 2.2.3 cannot be directly installed on windows yet. use dev wheel file
     - name: Install pemjax wheel
       if: runner.os=='Windows'
       shell: bash
       run: |
+        python3.13t -m pip install numpy thrift
+        python3.13t -m pip install dependency/src/main/resources/python/pandas*.whl
         python3.13t -m pip install $PEMJAX_HOME/pemjax-${{ inputs.pemja-version }}/dist/*.whl --no-clean
         python3.13t -m pip freeze list
 
